--- a/force-app/main/default/classes/SudyTrialService.cls
+++ b/force-app/main/default/classes/SudyTrialService.cls
@@ -10,6 +10,7 @@ public without sharing class SudyTrialService {
                         , Name
                         , Study_Sponsor__c
                         , Detailed_Description__c
+                        , Brief_Summary__c
                         , Override_Recruitment_Status__c
                         , Terms_And_Conditions_ID__c
                         , Link_to_Medical_Record_Review__c
