Create TAP from trigger.

--- a/force-app/main/default/classes/PETriggerHandler.cls
+++ b/force-app/main/default/classes/PETriggerHandler.cls
@@ -3,8 +3,13 @@
  */
 public with sharing class PETriggerHandler  extends TriggerHandler {
 
+    public override void onAfterInsert(List<SObject> newList) {
+        TherapeuticAreaPatientService.createTAP(newList);
+    }
+
     protected override void onAfterUpdate(List<SObject> newList, Map<Id, SObject> oldMap) {
         TherapeuticAreaPatientService.deleteTherapeuticAreaPatientFromPE(newList, (Map<Id, Participant_Enrollment__c>) oldMap);
+        TherapeuticAreaPatientService.createTAP(newList);
     }
 
 }
