--- a/force-app/main/default/classes/CommunityService.cls
+++ b/force-app/main/default/classes/CommunityService.cls
@@ -19,7 +19,8 @@ public without sharing class CommunityService {
     public static String COMMUNITY_ET_SHARE_RESOURCE = 'Share_Resources'; //email template
 
     // org wide email address
-    public static String COMMUNITY_ORG_WIDE_ADDRESS_NAME = 'IQVIA Referral Hub';
+    public static final String COMMUNITY_ORG_WIDE_ADDRESS_REFERRAL = 'IQVIA Referral Hub';
+    public static final String COMMUNITY_ORG_WIDE_ADDRESS_PATIENT = 'IQVIA Patient Portal';
 
     // case auto assignment rule
     public static String COMMUNITY_CASE_AR_NAME = 'HelpCase';
@@ -277,5 +278,16 @@ public without sharing class CommunityService {
                 WHERE ContactId = :contactId
         ];
         setUserToCommunity(user);
+    }
+
+    public static String getContactUserMode(String contactId) {
+        List<Contact> contact = [
+                SELECT userCommunityMode__c
+                FROM Contact
+                WHERE Id =: contactId
+        ];
+        if(!contact.isEmpty()) return contact.get(0).userCommunityMode__c;
+
+        return null;
     }
 }
