New Social Icons && Working Social on Study Page

--- a/force-app/main/default/classes/StudyDetailViewController.cls
+++ b/force-app/main/default/classes/StudyDetailViewController.cls
@@ -17,19 +17,19 @@ public without sharing class StudyDetailViewController {
                 new StudyActions.Action(
                         StudyActions.ACT_SHARE_EMAIL,
                         StudyActions.LABEL_SHARE,
-                        'icon-mailbox',
+                        'icon-mail',
                         false
                 ),
                 new StudyActions.Action(
                         StudyActions.ACT_SHARE_FACEBOOK,
                         StudyActions.LABEL_SHARE,
-                        'icon-facebook',
+                        'icon-facebook-2',
                         false
                 ),
                 new StudyActions.Action(
                         StudyActions.ACT_SHARE_LINKEDIN,
                         StudyActions.LABEL_SHARE,
-                        'icon-linkedin',
+                        'icon-linkedin-2',
                         false
                 ),
                 new StudyActions.Action(
