Added new field on Activity

--- a/force-app/main/default/classes/ExternalParticipantsService.cls
+++ b/force-app/main/default/classes/ExternalParticipantsService.cls
@@ -36,6 +36,8 @@ public with sharing class ExternalParticipantsService {
         request.setHeader('Content-Type', 'application/json');
         request.setBody(participantJSON);
         HttpResponse response = http.send(request);
+        System.debug(response.getStatus());
+        System.debug(response.getBody());
         return response.getStatus();
     }
 
